[GC-55] implement disconnect green source (#176)
* [GC-55] Added disconnect green source action plan with tests

* [GC-55] Added disconnect green source action to database + tests

* [GC-55] Generified adaptation action params (for connect/disconnect green source)

* [GC-55] Implemented handling disconnecting green source on the agent system side

* [GC] Fixed typo + renamed scenario directories

* [GC-fix-distribution-service] improve calculations

* [GC-fix-distribution-service] data not available fix

* [GC-55] Adjusted disconnection action

* [GC-55] Fixed for tests

Co-authored-by: Mikolaj Stanczyk <mstanczyk@ittouch.pl>